<resources>
    <string name="app_name">Bmob毕业选题</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="welcome">欢迎来到，Bmob</string>
    <string name="login_username_hint">学号/手机号</string>
    <string name="login_hope">Hope you are doing great?</string>
    <string name="remember_pwd">记住密码</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="name">姓名</string>
    <string name="phone_number">手机号</string>
    <string name="pwd">密码</string>
    <string name="click_login">点击登录</string>
    <string name="account_already_exist">账户已经存在？</string>
    <string name="workNum">工号</string>
    <string name="provost">教务长</string>
    <string name="teacher">教师</string>
    <string name="student">学生</string>
    <string name="dean">系主任</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="begin_verify">开始验证</string>
    <string name="next_step">下一步</string>
    <string name="find_pwd">找回密码</string>
    <string name="account">账号</string>
    <string name="input_phone_num">填写手机号码</string>
    <string name="_86">+86</string>
    <string name="commit">提交</string>
    <string name="input_code">请输入短信验证码</string>
    <string name="code">验证码</string>
    <string name="new_pwd">新密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="confirm">确定</string>
    <string name="home">留言</string>
    <string name="work">工作台</string>
    <string name="mine">我的</string>
    <string name="school">学校</string>
    <string name="college">院</string>
    <string name="depart">系</string>
    <string name="reLogin">重新登录</string>
    <string name="good_morning_ugo">Good morning,Ugo</string>
    <string name="stu_my_cls">我的班级</string>
    <string name="my_th">我的课题</string>
    <string name="graduate_thesis">毕业课题</string>
    <string name="name_1">姓名</string>
    <string name="phone">电话</string>
    <string name="morning">Hello，☀</string>
    <string name="xxx">XXX</string>
    <string name="me">我</string>
    <string name="xx学校">XX学校</string>
    <string name="xx学院">XX学院</string>
    <string name="xx系">XX系</string>
    <string name="xxClass">XX班级</string>
    <string name="student_number">学号</string>
    <string name="sex">性别</string>
    <string name="log_out">退出登录</string>
    <string name="switch_account">切换账号</string>
    <string name="setting">设置</string>
    <string name="choose_task">选择课题</string>
    <string name="major">大学·学院·专业</string>
    <string name="find_thesis">查找课题</string>
    <string name="empty_text" />
    <string name="thesis_detail">课题详情</string>
    <string name="th">课题</string>
    <string name="my_thesis">我的课题</string>
    <string name="into">加入</string>
    <string name="my_t">我的课题</string>
    <string name="s_s_m">选题学生名单</string>
    <string name="thesisName">课题名称</string>
    <string name="field">研究方向</string>
    <string name="require">课题要求</string>
    <string name="brief">课题简介</string>
    <string name="new_thesis">新建课题</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="has_approved">已审核</string>
    <string name="update_thesis_button">更新</string>
    <string name="select_list">选题名单</string>
    <string name="approve_task">已审批课题</string>
    <string name="find_teacher">查找教师名字</string>
    <string name="teacher_name">教师名称</string>
    <string name="task_name">课题名称</string>
    <string name="approve_thesis">审批课题</string>
    <string name="agree">通过</string>
    <string name="repulse">打回</string>
    <string name="has_approved_">已审批课题</string>
    <string name="wait_to_approve">待审批课题</string>
    <string name="find_name">查阅课题</string>
    <string name="teacher_1">老师</string>
    <string name="student_1">学生</string>
    <string name="dean_1">系主任</string>
    <string name="choose_thesis_time">选题时间</string>
    <string name="define_choose_thesis_time">定义选题时间</string>
    <string name="back">返回</string>
    <string name="commit_1">确定</string>
    <string name="choose_result">已选学生名单</string>
    <string name="not_se_stu_li">未选学生名单</string>
    <string name="app_th">审批课题</string>
    <string name="s_r">未选学生名单</string>
    <string name="not_app">未审批课题</string>
    <string name="s_m_t">我的课题</string>
    <string name="a_t_s">教师已退选</string>
    <string name="exit">退出课题</string>
    <string name="s_t">选择课题</string>
    <string name="issue_select_time">发布选题时间</string>
    <string name="time_start">开始时间</string>
    <string name="time_end">结束时间</string>
    <string name="u">更新</string>
    <string name="s">保存</string>
    <string name="nickname">昵称</string>
    <string name="name_">名字</string>
    <string name="_sig">个性签名</string>
    <string name="_sex">性别</string>
    <string name="_work_num">工号/学号</string>
    <string name="sc">学校</string>
    <string name="add">地址</string>
    <string name="ema">邮箱</string>
    <string name="phone_">电话</string>
    <string name="bir_">生日</string>
    <string name="d_">系</string>
    <string name="y_">院</string>
    <string name="w_">女</string>
    <string name="n_">男</string>
    <string name="l_m">留言:</string>
    <string name="c_l">确定给该课题留言吗?</string>
    <string name="cancel_">取消</string>
    <string name="_l_m">留言</string>
    <string name="h_l_m">历史留言</string>
    <string name="h_s_">已选学生名单</string>
    <string name="n_l_">年龄</string>
    <string name="nc">昵称</string>
    <string name="search_t">搜索</string>
    <string name="not_approve_task">未审批课题</string>
</resources>