<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="uri"
            type="java.lang.String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.login.LoginFragment">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="15dp" />

        <EditText
            android:id="@+id/usernameEv"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:background="@drawable/login_et_bg"
            android:drawableStart="@drawable/username_img"
            android:drawablePadding="15dp"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/grey_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/passwordEv"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/login_et_bg"
            android:drawableStart="@drawable/password_lock_img"
            android:drawablePadding="15dp"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/grey_light"
            app:layout_constraintEnd_toEndOf="@+id/usernameEv"
            app:layout_constraintStart_toStartOf="@+id/usernameEv"
            app:layout_constraintTop_toBottomOf="@+id/usernameEv" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_hope"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <CheckBox
            android:id="@+id/rememberPwdCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/remember_pwd"
            android:textColor="@color/grey_light"
            app:layout_constraintStart_toStartOf="@+id/passwordEv"
            app:layout_constraintTop_toBottomOf="@+id/passwordEv" />

        <TextView
            android:id="@+id/forgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pwd"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/rememberPwdCheckBox"
            app:layout_constraintEnd_toEndOf="@+id/passwordEv"
            app:layout_constraintTop_toTopOf="@+id/rememberPwdCheckBox" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/login_pwd_visible_state"
            app:layout_constraintBottom_toBottomOf="@+id/passwordEv"
            app:layout_constraintEnd_toEndOf="@+id/passwordEv"
            app:layout_constraintTop_toTopOf="@+id/passwordEv"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_round_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/passwordEv"
            app:layout_constraintStart_toStartOf="@+id/passwordEv"
            app:layout_constraintTop_toBottomOf="@+id/rememberPwdCheckBox" />


        <Button
            android:id="@+id/signupBth"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_round_bg"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/loginBtn"
            app:layout_constraintStart_toStartOf="@+id/loginBtn"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>