<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login.RegisterFragment">

    <ImageView
        android:id="@+id/backImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/back_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_zhuCe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backImg" />

    <EditText
        android:id="@+id/nameEv"
        android:layout_width="356dp"
        android:layout_height="56dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@drawable/login_et_bg"
        android:drawableStart="@drawable/username_img"
        android:drawablePadding="15dp"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/grey_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_zhuCe" />

    <EditText
        android:id="@+id/workNumEv"
        android:layout_width="356dp"
        android:layout_height="56dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/login_et_bg"
        android:drawableStart="@drawable/username_img"
        android:drawablePadding="15dp"
        android:hint="@string/workNum"
        android:inputType="number"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/grey_light"
        app:layout_constraintEnd_toEndOf="@+id/nameEv"
        app:layout_constraintStart_toStartOf="@+id/nameEv"
        app:layout_constraintTop_toBottomOf="@+id/nameEv" />

    <EditText
        android:id="@+id/pwdEv"
        android:layout_width="356dp"
        android:layout_height="56dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/login_et_bg"
        android:drawableStart="@drawable/password_lock_img"
        android:drawablePadding="15dp"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/grey_light"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumberEv"
        app:layout_constraintStart_toStartOf="@+id/phoneNumberEv"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberEv" />

    <EditText
        android:id="@+id/phoneNumberEv"
        android:layout_width="356dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/login_et_bg"
        android:drawableStart="@drawable/signup_phone"
        android:drawablePadding="15dp"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/grey_light"
        app:layout_constraintEnd_toEndOf="@+id/workNumEv"
        app:layout_constraintStart_toStartOf="@+id/workNumEv"
        app:layout_constraintTop_toBottomOf="@+id/workNumEv"
        tools:ignore="TextFields" />


    <Button
        android:id="@+id/registerBtn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_round_bg"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_already_exist"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="655dp" />

        <TextView
            android:id="@+id/accountLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_login"
            android:textColor="@color/blue" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/pwdEv"
        app:layout_constraintStart_toStartOf="@+id/pwdEv"
        app:layout_constraintTop_toBottomOf="@+id/pwdEv">

        <LinearLayout
            android:id="@+id/teacherLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="428dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/teacher_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/signup_teacher" />

            <TextView
                android:id="@+id/teacher"
                android:layout_width="wrap_content"
                android:layout_height="11dp"
                android:layout_marginStart="15dp"
                android:text="@string/teacher"
                android:textColor="@color/blue"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/studentLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="283dp"
            tools:layout_editor_absoluteY="431dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/student_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/signup_student" />

            <TextView
                android:id="@+id/student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/student"
                android:textColor="@color/blue"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:id="@+id/provostLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="522dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/provost_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/signup_provost" />

            <TextView
                android:id="@+id/provost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/provost"
                android:textColor="@color/blue"
                android:textSize="10sp"
                tools:ignore="SmallSp"
                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="574dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deanLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="251dp"
            tools:layout_editor_absoluteY="521dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/dean_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/signup_dean" />

            <TextView
                android:id="@+id/dean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/dean"
                android:textColor="@color/blue"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/currentIdentification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_light"
        app:layout_constraintBottom_toTopOf="@+id/nameEv"
        app:layout_constraintEnd_toEndOf="@+id/text_zhuCe"
        app:layout_constraintStart_toStartOf="@+id/text_zhuCe"
        app:layout_constraintTop_toBottomOf="@+id/text_zhuCe" />

</androidx.constraintlayout.widget.ConstraintLayout>