<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/c_l"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="167dp"
            tools:layout_editor_absoluteY="160dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="674dp">

            <Button
                android:id="@+id/cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_round_bg"
                android:text="@string/cancel_"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/confirm"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/btn_round_bg"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>