<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login.findPassword.ResetPasswordFragment">

    <EditText
        android:id="@+id/editText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:inputType="textPassword"
        android:padding="25dp"
        android:paddingStart="85dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/new_pwd"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText" />


    <EditText
        android:id="@+id/confirm"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:inputType="textPassword"
        android:padding="25dp"
        android:paddingStart="85dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:ignore="LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/textView77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/confirm_pwd"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/confirm"
        app:layout_constraintStart_toStartOf="@+id/confirm"
        app:layout_constraintTop_toTopOf="@+id/confirm" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_round_bg"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCode" />


    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:inputType="number"
        android:padding="25dp"
        android:paddingStart="60dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/confirm"
        app:layout_constraintStart_toStartOf="@+id/confirm"
        app:layout_constraintTop_toBottomOf="@+id/confirm"
        tools:ignore="LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextCode"
        app:layout_constraintStart_toStartOf="@+id/editTextCode"
        app:layout_constraintTop_toTopOf="@+id/editTextCode" />


</androidx.constraintlayout.widget.ConstraintLayout>