<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="phoneNumber"
            type="java.lang.String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.login.findPassword.UsernameFragment">

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_round_bg"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/find_pwd"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:inputType="number"
            android:padding="25dp"
            android:paddingStart="60dp"
            android:text="@{phoneNumber}"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/editText"
            app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintTop_toTopOf="@+id/editText" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>